fix mobile phone nav bar wrap issue
git clone still broken, temp workaround

--- a/style.css
+++ b/style.css
@@ -24,8 +24,10 @@ header{
     position: relative;
     top: 0;
     width: 100%;
-    padding: 30px 100px;
+    /* padding: 30px 100px; */
+    padding: 1.5vw 4.5vw;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -52,7 +54,7 @@ header .navigation a{
     text-decoration: none;
     font-weight: 500;
     letter-spacing: 1px;
-    padding: 2px 15px;
+    /* padding: 2px 15px; */
     border-radius: 10px;
     text-transform: uppercase;
     transition: 0.3s;
@@ -60,7 +62,7 @@ header .navigation a{
 }
 
 header .navigation a:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 1.5vw;
 }
 
 header .navigation a:hover{
